--- a/Guanabara/Aulas/Exercicios/4/style.css
+++ b/Guanabara/Aulas/Exercicios/4/style.css
@@ -31,6 +31,10 @@ div {
     
 }
 
+div p {
+    margin-bottom: 40px;
+}
+
 div input{
     height: 27px;
     padding: 5px;  
@@ -46,11 +50,23 @@ footer {
     font-style: italic;
 }
 
-input[type="text"]::-webkit-input-placeholder {
+
+
+textarea {
+    width: 200px;
+    height: 305px;
+    resize: none;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 23px;
+    padding: 15px;
+}
+
+textarea::-webkit-input-placeholder {
     color: rgb(110, 110, 110);
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
   }
 
-  #txt {
-    height: 180px;
-  }
+  
