--- a/Guanabara/Aulas/Exercicios/5/style.css
+++ b/Guanabara/Aulas/Exercicios/5/style.css
@@ -6,6 +6,7 @@ body {
 header {
     color: white;
     text-align: center;
+    margin: auto;
 }
 
 
@@ -19,6 +20,7 @@ main section {
 }
 
 footer {
+    margin: auto;
     color: white;
     text-align: center;
     font-style: italic;
