--- a/CRUD/Meu projeto/style.css
+++ b/CRUD/Meu projeto/style.css
@@ -28,6 +28,7 @@ header h1 {
     justify-content: space-around;
     padding: 37px;
     border: 2px solid rgba(0, 0, 0, 0.233);
+    border-top: none;
   }
 
   #form p {
@@ -55,7 +56,7 @@ header h1 {
   }
 
   #limpar_dados {
-    width: 130px;
+    width: 200px;
     font-weight: bold;
     
     background-color: rgba(247, 1, 1, 0.575);
@@ -63,8 +64,8 @@ header h1 {
   }
 
 #alterar {
-  width: 130px;
-    font-weight: bold;
+  width: 170px;
+  font-weight: bold;
     
     background-color: rgba(255, 217, 5, 0.795);
     text-transform: uppercase;
@@ -84,6 +85,7 @@ header h1 {
     font-size: 20px;
     margin-bottom: 10px;
     padding-bottom: 15px;
+    padding-left: 8px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.233);
     
   }
@@ -92,4 +94,26 @@ header h1 {
     color: rgb(113, 2, 204);
   }
 
-  
+
+  #editar {
+    margin-left: 20px;
+    width: 60px;
+    font-weight: bold;
+    background-color: rgba(255, 217, 5, 0.795);
+    text-transform: uppercase;
+  }
+
+  #excluir {
+    margin-left: 20px;
+    width: 70px;
+    font-weight: bold;
+    background-color: rgba(247, 1, 1, 0.575);
+    text-transform: uppercase;
+  }
+
+  #msg {
+    text-align: center;
+    padding: 15px 0px;
+    font-size: 30px;
+    font-family: 'Signika Negative', sans-serif;
+  }
