--- a/API (Application Programming Interface)/API (Wiki naruto)/style.css
+++ b/API (Application Programming Interface)/API (Wiki naruto)/style.css
@@ -1,4 +1,101 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@500&display=swap');
+
 body {
     background-color: #030518;
     color: white;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+#wiki {
+    background-color: rgb(214, 214, 214);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    
+}
+
+#form {
+    background-color: rgb(214, 214, 214);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 500px;
+    padding: 150px;
+    margin: 150px;
+    border-radius: 10px;
+}
+
+#numero {
+    padding: 20px;
+    width: 190px;
+    border-radius: 10px;
+    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.603);
+    margin-right: 5px ;
+}
+
+#form p {
+    text-align: justify;
+    color: black;
+    font-family: 'Arimo', sans-serif;
+}
+
+#input {
+    display: flex;
+    flex-direction: row;
+}
+
+#salvar {
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.603);
+    background-color: coral;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#nome {
+    font-size: 30px;
+    color: black;
+    padding: 15px;
+    margin-bottom: 30px;
+    font-family: 'Arimo', sans-serif;
+    border-bottom: 1px solid black; 
+}
+
+#foto {
+    width: 250px;
+    border-radius: 5px;
+    margin-bottom: 35px;
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.226);
+   
+}
+
+#lore {
+    font-size: 16px;
+    color: black;
+    text-indent: 30px;
+    text-align: justify;
+    padding: 30px;
+    font-family: 'Arimo', sans-serif;
+}
+
+#reload {
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.603);
+    background-color: coral;
+    font-weight: bold;
+    cursor: pointer;
+    
 }
